<resources>
    <string name="app_name">Data Transfer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="Phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="click">Click</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_app_name">Himanshu</string>


</resources>